vyre-macros/tests/ui/bad_pass_preserves_abi_non_bool.stderr
error: expected boolean literal
 --> tests/ui/bad_pass_preserves_abi_non_bool.rs:7:21
  |
7 |     preserves_abi = "yes"
  |                     ^^^^^
